# warp-terminal

./: Cargo.toml  Makefile  OMW.md  README.md  omw
app/: Cargo.toml  build.rs
app/src/: app_menus.rs  lib.rs  (+4 more)
crates/local_agent/: Cargo.toml
crates/local_agent/src/: engine.rs  lib.rs  lib_tests.rs  openai.rs  prompt.rs
crates/warp_agent_grpc/: Cargo.toml  build.rs
crates/warp_agent_grpc/proto/: agent.proto
crates/warp_agent_grpc/src/: lib.rs
patches/: 0001-Add-tmux-style-leader-key-ctrl-b-chords-for-tab-mana.patch  0002-Make-leader-keymap-configurable-via-named-editable-b.patch  0003-Show-a-leader-engaged-indicator-in-the-tab-bar-with-.patch  0004-Free-ctrl-b-for-the-leader-by-unbinding-editor-curso.patch  0005-Compile-Metal-shaders-under-nix-via-WARP_METAL_DEVEL.patch  0006-Add-configurable-selectable-server-agent-backends.patch  0007-Add-Settings-dropdown-to-select-the-active-backend.patch  0008-Rebrand-the-OSS-app-bundle-as-oh-my-warp.patch  0009-Add-in-process-gRPC-agent-bridge-oh-my-warp.patch  0010-Add-gRPC-harness-dropdown-to-Settings-oh-my-warp.patch  0011-Synthesize-ambient-task-state-for-host-owned-runs-oh.patch  0012-Disable-RudderStack-telemetry-egress-oh-my-warp.patch  0013-Disable-Sentry-crash-reporting-egress-oh-my-warp.patch  0014-Enable-the-JavaScript-plugin-host-in-the-default-bui.patch  0015-Add-base-warp.log-warp.version-plugin-API-oh-my-warp.patch  0016-Fix-plugin-host-launch-flag-so-the-host-actually-sta.patch  0017-Add-warp.commands-plugin-API-command-registry-oh-my-.patch  0018-Surface-plugin-commands-in-the-command-palette-run-w.patch  (+32 more)
(+247 files in other folders)
