[package]
name = "local_agent"
edition = "2024"
authors.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
async-stream.workspace = true
futures.workspace = true
log.workspace = true
reqwest.workspace = true
reqwest-eventsource.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
mockito.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
